Update StateHandler.java
added showUsedPSUs and removed singelton