@@ -1,4 +1,4 @@
-package model;
+//package model;
 import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -6,7 +6,7 @@ import java.util.stream.Stream;
 /** Class State provides methods for operatig one states.
  * A warehouse and an order needs to be initalized for the most methods.
  * A state can be evluated or neighbours can be created for it. Furthermore
- * an initialState can be created when given an order.
+ * an initialState or a randomState can be created.
  *
  * @author Julia Kaltenborn (jkaltenborn@uos.de)
  */
@@ -16,47 +16,34 @@ public class StateHandler {
   private HashMap<String, ArrayList<Integer>> warehouse = new HashMap<String, ArrayList<Integer>>();
   private static StateHandler stateInstance = null;
 
-  /**
-   *singelton
-   *only one instance can be created
-   *@param warehouse
+  /** Constructor for creating a StateHandler.
+   * @param warehouse of type HashMap<String, ArrayList<Integer>>.
+   * The warehouse must consist of a HashMap with String as keys (Item) and an ArrayList as values
+   * (PSUs containing the item). Do not use empty Strings. Strings must be unique identifiers for
+   * the items. Do not skip indices of the ArrayList. Start with index 0.
+   * Do not use empty warehouse or a null object.
+   * @param order of type String[]. Do not use empty order or a null object.
    */
-  private StateHandler(HashMap<String, ArrayList<Integer>> warehouse){
+  public StateHandler(HashMap<String, ArrayList<Integer>> warehouse, String[] order){
+    if(warehouse == null || warehouse.size() == 0){
+      System.err.println("@StateHandler: Warehouse is null or empty.");
+    }
+    if(order == null || order.length < 1){
+      System.err.println("@StateHandler: Order is null or empty.");
+    }
     this.warehouse = warehouse;
+    this.order = order;
   }
 
-  /**
-   *@return StateHandler on which the user can operate.
-   * If the StateHandler has not been initialized with a warehouse,
-   * the method returns a null object.
-   */
-  public static StateHandler getInstance(){
-    if(stateInstance == null){
-      System.out.println("@StateHandler: Null Object returned. State has not yet been initialized with Warehouse.");
-    }
-    return stateInstance;
-  }
-
-  /**
-   *@param warehouse, a hashmap containing String as key, which represents
-   * an item. The ArrayList<Integer> (value of the hashmap) contains all the
-   * PSUS that contain the key item. The integers in ArrayList should be ordered
-   * ascending. 0 is allowed as Integer. Do not use empty Strings.
-   * Strings must be unique identifiers for the items.
-   *@return StateHandler on which the user can operate.
-   */
-  public static StateHandler getInstance(HashMap<String, ArrayList<Integer>> warehouse){
-    if(stateInstance == null){
-      stateInstance = new StateHandler(warehouse);
-    }
-    return stateInstance;
-  }
-
-  /**
-   *@param newWarehouse which should be used
+  /** Updates the warehouse, replaces the current warehouse with a new one.
+   *@param newWarehouse of type HashMap<String, ArrayList<Integer>>. The new warehouse.
    */
   public void updateWarehouse(HashMap<String, ArrayList<Integer>> newWarehouse){
-    this.warehouse = newWarehouse;
+    if(newWarehouse == null || newWarehouse.size() < 1){
+      System.err.println("@StateHandler: New Warehouse was not set since it is empty or null.");
+    } else{
+      this.warehouse = newWarehouse;
+    }
   }
 
   /**
@@ -68,9 +55,9 @@ public class StateHandler {
     *Returns -1 if the element could not be found in the psus.
     *Return -2, if the for-loop was not entered -> severe problem which should be
     *handeled.
-    *@param state, current state which shall be evaluated
+    *@param state, current state which shall be evaluated.
     */
-  public static int evaluate(int[] state){
+  public int evaluate(int[] state){
     int result = -2;
     if(state.length < 1){
       System.out.println("@StateHandler: An empty State cannot be evaluated");
@@ -92,23 +79,19 @@ public class StateHandler {
     return result;
   }
 
-	/** Neighbours which are searched: For each element of the
+	/** Creates the neighbours of a given State.
+   * Neighbours which are searched: For each element of the
    * order there is a new PSU found, containing that item.
    * A neighbours differs only in one PSU from the current State.
-	 *@return ArrayList<int[]> with all neighbours, do not skip indices and start with 0.
-   *@param currentState from where on the next neighbours
+	 *@return ArrayList<int[]> with all neighbours, does not skip indices and starts with 0.
+   *@param currentState of type int[]: from where on the next neighbours
    * should be searched.
-   *@param stopAtEndOfWarehouse if true, it will return -1
-   * if it has reached the End of arraylist containing all valid Psus
-   * for that item. if false, the next neighbor will be choosen from
-   * the beginning of the arraylist
+   *@param stopAtEndOfWarehouse of type boolean. If true, it will return -1 for items,
+   * if it has reached the End of the warehouse. Ff false, the next neighbor will be choosen from
+   * the beginning of the beginning of the warehouse. In this case there should be an iteration limit.
 	 */
 	public ArrayList<int[]> createNeighbours(int[] currentState, boolean stopAtEndOfWarehouse){
-		System.out.println("@StateHandler: Starting to create Neighbours");
     ArrayList<int[]> neighbours = new ArrayList<int[]>();
-    if(order == null || order.length < 1){
-      System.out.println("@StateHandler: Order is empty or null. Set up the order before asking for neighbours.");
-    }
 
     for(int i = 0; i < order.length; i++){
       int[] currentNeighbour = currentState.clone();
@@ -116,7 +99,7 @@ public class StateHandler {
       ArrayList<Integer> allPSUsContainingItem = warehouse.get(currentItem);
       int currentPSU = currentState[i];
       if((currentPSU != -1) & (allPSUsContainingItem != null)){
-          int indexOfCurrentPSU = allPSUsContainingItem.indexOf(new Integer(currentPSU));
+          int indexOfCurrentPSU = allPSUsContainingItem.indexOf(Integer.valueOf(currentPSU));
           if(indexOfCurrentPSU < allPSUsContainingItem.size()-1){
             currentNeighbour[i] = allPSUsContainingItem.get(indexOfCurrentPSU+1);
           } else if ((indexOfCurrentPSU >= allPSUsContainingItem.size()-1) && stopAtEndOfWarehouse){
@@ -131,17 +114,13 @@ public class StateHandler {
   }
 
   /**
-  *generates a Random State, if order given beforehand
-  *@return int[], the random state. The ith number of the array represents
-  * a PSU that contains the ith item of the order. -1 stands for item
-  * not contained in the warehouse.
-  */
+   *Generates a Random State, if order given beforehand
+   *@return int[], the random state. The ith number of the array represents
+   * a PSU that contains the ith item of the order. -1 stands for item
+   * not contained in the warehouse.
+   */
   public int[] generateRandomState(){
     Random randomGenerator = new Random();
-    if(order == null || order.length < 1){
-      System.out.println("@StateHandler: Order is empty or null. Set up the order before creating a random state.");
-      return null;
-    }
     int[] randomState = new int[order.length];
     //go through the order
     //catch for each element of the order a random number of the corresponding ArrayList<Integer>
@@ -159,18 +138,13 @@ public class StateHandler {
   }
 
   /**
-   * generates an initial State if order is given beforehand
+   * Generates an initial State if order is given beforehand
    *@return int[], the first initial state. The ith number of the array represents
    * a PSU that contains the ith item of the order. -1 stands for item
    * not contained in the warehouse.
    */
   public int[] generateInitialState() {
-    if(order == null || order.length < 1){
-      System.out.println("@StateHandler: Order is empty or null. Set up the order before creating an initial state.");
-      return null;
-    }
     int[] initialState = new int[order.length];
-
     //goes through the order and assigns for each item
     //the first PSU contained in the ArrayList "allPSUsContainingItem"
     for(int i = 0; i < order.length; i++){
@@ -185,61 +159,59 @@ public class StateHandler {
     return initialState;
   }
 
-  /** Order hast to be set before generateInitialState
-   * generateRandomState or createNeighbours
-   *@param order for changing the order
+  /**Method for changing or setting the order.
+   * Order hast to be set before generateInitialState
+   * generateRandomState or createNeighbours.
+   *@param order of type String[] which should be set.
    */
   public void setOrder(String[] order){
-    this.order = order;
+    if(order == null || order.length < 1){
+      System.err.println("@StateHandler: Order was not set, since it was empty or null");
+    } else {
+      this.order = order;
+    }
   }
 
   /**
-   *@return the current order
+   *@return String[], the current order.
    */
   public String[] getOrder(){
     return this.order;
   }
 
-  /**
+  /** Return the best value a state can reach
+   * via evaluate with the current order.
    * @return int which is the max value
    * a state can reach via {@evaluate}
    */
   public int optimum(){
-    if(order == null || order.length < 1){
-      System.out.println("@StateHandler: Order is empty or null. Optimum cannot be calculated without order.");
-    }
     return order.length - 1;
   }
 
-  //TODO do we need this method?
-  /**
+  /**Checks if given state is a valid state. Valid states do not contain -1.
+   * -1 represents an item of the order that was not found.
    *@return boolean if state is valid or not.
-   * returns false for invalid state and true for valid state.
-   * Invalid States might not be considered during Search
-   *@param state which should be checked
+   * Returns false for invalid state and true for valid state.
+   * Invalid States might not be considered during Search.
+   *@param state of type[], which should be checked.
    */
   public boolean stateValid(int[] state){
     if(state == null || state.length < 1){
       System.out.println("@StateHandler: State is null or empty.");
       return false;
     }
-    //we do that in order to reduce time complexity
-    //of course we could also just use a for-loop instead
     List<Integer> list = Arrays.stream(state).boxed().collect(Collectors.toList());
     return (!list.contains(-1));
   }
 
-  /**
-   *@return number of used PSUs in a state
-   *@param state of which we want to know the number of used PSUS
+  /** Returns the number of used PSUs.
+   *@return number of used PSUs in a state.
+   *@param state of type[] of which we want to know the number of used PSUS.
    */
   public int numOfUsedPSUs(int[] state){
     int result;
     Set<Integer> stateAsSet = new HashSet<Integer>();
     for(int i = 0; i < state.length; i++){
-      if(state[i] == -1){
-        return -1;
-      }
       stateAsSet.add(Integer.valueOf(state[i]));
     }
     result = stateAsSet.size();
@@ -248,5 +220,20 @@ public class StateHandler {
       System.out.println("@StateHandler: Attention, State for which number of used PSUs was asked is not valid.");
     }
     return result;
+  }
+
+  /** Shows the PSU a State uses without duplicates.
+   *@param state of type int[], of which we want to know the used PSUs.
+   *If it contains a -1 at least one item was not found.
+   *@return an int[] with the identifiers of the used PSUs.
+   */
+  public int[] showUsedPSUs(int[] state){
+    //short way for getting a set, runtime is still the same.
+    Set<Integer> hashSet = new HashSet<Integer>();
+    for(int i = 0; i < state.length; i++){
+      hashSet.add(Integer.valueOf(state[i]));
+    }
+    Integer[] result = hashSet.toArray(new Integer[hashSet.size()]);
+    return Arrays.stream(result).mapToInt(Integer::intValue).toArray();
   }
 }
